# my-budget

./: .gitignore  Cargo.toml  README.md  journal-2023-10-09.log.toml
src/: error.rs  macros.rs  main.rs  utils.rs
src/env/: config.rs  mod.rs  store.rs
src/gui/: app.rs  flow.rs  mod.rs  scenes.rs
