[package]
name = "my-budget"
version = "0.10.239"
edition = "2021"
authors = ["DarkJoij"]
description = "Smart application for personal and family budget management."

[dependencies]
casual_logger = "0.6.5"
iced = "0.10"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[features]
default = []
ultimate = []
